Update to java 11, comment out some TEST class